<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>camera_tools</name>
  <version>0.5.0</version>
  <description>A ROS 2 camera camera_bringup</description>
  <maintainer email="yaruo0406@gmail.com">haruyamakenta</maintainer>
  <license>BSD</license>

  <!-- <author>Sander G. van Dijk</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
